@@ -1,14 +1,16 @@
 package com.tariketf.student_system_information.model;
 
-import com.tariketf.student_system_information.model.enums.AuthProvider;
+import com.fasterxml.jackson.annotation.JsonFormat;
 import com.tariketf.student_system_information.model.enums.Role;
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDate;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -32,43 +34,30 @@ public class User implements UserDetails {
     @Column(name = "last_name")
     private String lastName;
 
+    @Column(nullable = false)
+    private String address;
+
+    @Column(name = "date_of_birth", nullable = false)
+    private LocalDate dateOfBirth;
+
     @Enumerated(EnumType.STRING)
     private Role role;
 
-    @Enumerated(EnumType.STRING)
-    private AuthProvider provider;
+    // --- Konstruktori ---
 
-    @Column(name = "provider_id")
-    private String providerId;
-
-    // --- 2FA Polja ---
-    @Column(name = "mfa_enabled")
-    private boolean mfaEnabled;
-
-    @Column(name = "mfa_secret")
-    private String mfaSecret;
-
-    // --- 1. Konstruktori ---
-
-    // Prazan konstruktor je OBAVEZAN za JPA (Hibernate)
     public User() {
     }
 
-    // Konstruktor sa svim poljima (korisno za nas kad pravimo objekte)
-    public User(String email, String phoneNumber, String password, String firstName, String lastName, Role role, AuthProvider provider, String providerId, boolean mfaEnabled, String mfaSecret) {
+    public User(String email, String phoneNumber, String password, String firstName, String lastName, Role role) {
         this.email = email;
         this.phoneNumber = phoneNumber;
         this.password = password;
         this.firstName = firstName;
         this.lastName = lastName;
         this.role = role;
-        this.provider = provider;
-        this.providerId = providerId;
-        this.mfaEnabled = mfaEnabled;
-        this.mfaSecret = mfaSecret;
     }
 
-    // --- 2. Getteri i Setteri ---
+    // --- Getteri i Setteri ---
 
     public Long getId() {
         return id;
@@ -122,47 +111,28 @@ public class User implements UserDetails {
         this.role = role;
     }
 
-    public AuthProvider getProvider() {
-        return provider;
+    public String getAddress(){
+        return address;
     }
 
-    public void setProvider(AuthProvider provider) {
-        this.provider = provider;
+    public void setAddress(String address){
+        this.address = address;
     }
 
-    public String getProviderId() {
-        return providerId;
+    public LocalDate getDateOfBirth(){
+        return dateOfBirth;
     }
 
-    public void setProviderId(String providerId) {
-        this.providerId = providerId;
+    public void setDateOfBirth(LocalDate dateOfBirth){
+        this.dateOfBirth = dateOfBirth;
     }
 
-    public boolean isMfaEnabled() {
-        return mfaEnabled;
-    }
-
-    public void setMfaEnabled(boolean mfaEnabled) {
-        this.mfaEnabled = mfaEnabled;
-    }
-
-    public String getMfaSecret() {
-        return mfaSecret;
-    }
-
-    public void setMfaSecret(String mfaSecret) {
-        this.mfaSecret = mfaSecret;
-    }
-
-    // --- 3. Override metode iz UserDetails interfejsa (Spring Security) ---
+    // --- UserDetails Metode ---
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Pretvara naš Role Enum u format koji Spring Security razumije
-        if (role == null) {
-            return Collections.emptyList();
-        }
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        if (role == null) return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -172,38 +142,18 @@ public class User implements UserDetails {
 
     @Override
     public String getUsername() {
-        return email; // Email koristimo kao username
+        return email;
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
+    public boolean isAccountNonExpired() { return true; }
 
     @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
+    public boolean isAccountNonLocked() { return true; }
 
     @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
+    public boolean isCredentialsNonExpired() { return true; }
 
     @Override
-    public boolean isEnabled() {
-        return true;
-    }
-
-    // --- 4. toString, equals i hashCode (Dobra praksa) ---
-    // toString je koristan za debuggovanje (NE uključuj password u toString!)
-
-    @Override
-    public String toString() {
-        return "User{" +
-                "id=" + id +
-                ", email='" + email + '\'' +
-                ", role=" + role +
-                '}';
-    }
+    public boolean isEnabled() { return true; }
 }
